fix: fix card styles and remove feather icons from project

--- a/src/shared/assets/styles/customComponents.scss
+++ b/src/shared/assets/styles/customComponents.scss
@@ -1,3 +1,6 @@
+@use './components/vcard.scss';
+@use './components/vcheckbox.scss';
+
 @layer components {
   .page-title {
     @apply font-bold opacity-90 text-primary uppercase;
