--- a/src/widgets/table/assets/styles/_grid.scss
+++ b/src/widgets/table/assets/styles/_grid.scss
@@ -1,8 +1,8 @@
-// Table Grid Styles
+// Table Grid Styles - Modern Edition
 // ============================================
 @use './variables' as *;
 
-// Main grid container
+// ...existing code...
 .table-grid {
   display: grid;
   width: 100%;
