--- a/src/widgets/table/assets/styles/table.scss
+++ b/src/widgets/table/assets/styles/table.scss
@@ -1,10 +1,9 @@
-// Table Component Styles
+// Table Component Styles - Modern Edition 2025
 // ============================================
 // Main file that imports all modular styles
-// Each module is responsible for its part of functionality
 
 // 1. Design tokens & Variables
-@use './variables';
+@use './variables' as *;
 
 // 2. Layout Components
 @use './wrapper';
@@ -22,9 +21,4 @@
 
 // 5. Utilities
 @use './utilities';
-
-// ============================================
-// This file can be imported in component:
-// @use '@/widgets/table/assets/styles/table.scss';
-// ============================================
 
